--- a/index.html
+++ b/index.html
@@ -1,4 +1,45 @@
 <!DOCTYPE html>
 <head>
-    
+    <h1>My Resume</h1>
 </head>
+<body>
+    PAINDLA KUSHAL
+    <img src="./Screenshot 2024-08-15 at 4.09.08 PM.png" alt="screenshot" />
+</body>
+<h2>Summary</h2>
+I am a hardworking and dedicated individual with experience in coustumer service and administration
+<hr />
+<h2>Education</h2>
+<ul>
+    <li>Shine High School,hanamkonda,Warangal</li>
+    <li>Intermediate - SR Junior College Subedari Waddepally hanamkonda</li>
+    <li>Btech in National Institute of Technology Calicut</li>
+</ul>
+<hr />
+<h2>Work Experience</h2>
+<ul>
+    <li><h3>Coustumer Service Representative</h3></li>
+    <ul>
+        <li>Answered customerinquires via phone and email</li>
+        <li>Resolved customer complaints ans issues</li>
+        <li>Maintained customer records and updated account information</li>
+    </ul>
+    <li><h3>Administration Assistant</h3></li>
+    <ul>
+        <li>Assisted with scheduling appointments and meetings</li>
+
+    </ul>
+</ul>
+<hr />
+<h2>My Hobbies</h2>
+<ul>
+    <li>Watching Movies</li>
+    <li>Learning new skills</li>
+    <li>Listening music</li>
+    <li>Playing cricket</li>
+</ul>
+<hr />
+<h2>Contact Me</h2>
+<li>Phone number:7670932877</li>
+<li> Address:Mega Hostel c-block</li>
+<hr />
